@@ -1,0 +1,9 @@
+Title: windows_os_bonding: new check for bonding interfaces on windows
+Level: 1
+Component: checks
+Version: 1.2.5i1
+Date: 1393513807
+Class: feature
+
+new check for bonding interfaces on windows configured on operating system
+level
