@@ -95,6 +95,7 @@
     * 0560 check_mk_agent.solaris: report statgrab_mem section if solaris_mem section is missing...
     * 0702 Rule for checking agents for wanted version...
     * 0586 rmon_stats: new snmp check to gather network traffic statistics on RMON enabled network interfaces
+    * 0704 windows_os_bonding: new check for bonding interfaces on windows...
     * 0103 FIX: services: Fixed bug with service inventory defined in main.mk...
     * 0299 FIX: borcade_mlx_fan: Prettified output, handling "other" state now
     * 0300 FIX: cisco_fru_power: Trying not to inventorize not plugged in FRUs...
